--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "HENTAI-QUEEN",
+    "name": "JBOT",
     "version": "0.0.1",
     "description": "Customizable WhatsApp Bot",
     "main": "index.js",
@@ -25,9 +25,9 @@
         "MD",
         "baileys-md"
     ],
-    "homepage": "https://github.com/dinuwah/HENTAI-QUEEN",
+    "homepage": "https://github.com/Alexmedia23/QUEEN-HENTAI",
     "author": {
-        "name": "Dinuwa Official²⁰²³"
+        "name": "JOSH"
     },
     "repository": {
         "type": "git",
